Update README
- removed manual installation section (upstream changed the
process)
- removed translation section (upstream process is undocumented)
- updated roadmap